# api-sentinel

./: .env.example  .gitignore  CLAUDE.md  FUTURE_DEVELOPMENTS.md  PROGRESS.md  README.md  pyproject.toml  sentinel_config.example.yaml
sentinel/: __init__.py  cli.py  config.py  reporter.py  runner.py
sentinel/checks/: __init__.py  auth.py  authorization.py  base.py  headers.py  input_handling.py  rate_limit.py  transport.py
sentinel/llm/: __init__.py  claude.py  gemini.py  ollama.py  openai_backend.py  prompt.py
sentinel/ui/: __init__.py  launcher.py  server.py
sentinel/ui/routes/: config_editor.py  config_viewer.py  env.py  pages.py  scans.py
sentinel/ui/services/: config_io.py  config_writer.py  env_vars.py  form_parser.py  scan_runner.py
sentinel/ui/static/: styles.css
sentinel/ui/templates/: base.html  config.html  config_edit.html  home.html  scan.html  scans.html
sentinel/ui/templates/partials/: config_form.html  endpoint_row.html  env_var_options.html  scan_results.html  scan_status.html
sentinel/utils/: env_loader.py  http_client.py
tests/: conftest.py
tests/security/: test_auth.py  test_authorization.py  test_headers.py  test_input_handling.py  test_rate_limit.py  test_transport.py
tests/ui/: test_config_io.py  test_config_writer.py  test_env_var_isolation.py  test_form_parser.py  test_import_gate.py  test_launcher.py  test_routes_config.py  test_routes_config_editor.py  test_routes_env.py  test_routes_pages.py  test_routes_scans.py  test_scan_runner.py  test_services_env_vars.py
tests/unit/: test_cli.py  test_config.py  test_llm.py  test_reporter.py  test_runner.py
