[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-sentinel"
version = "0.1.0"
description = "Automated API security checker — plug it in, it tells you what's broken."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.5",
    "rich>=13.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
gemini = ["google-generativeai>=0.8"]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
llm = [
    "google-generativeai>=0.8",
    "anthropic>=0.40",
    "openai>=1.50",
]
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
sentinel = "sentinel.cli:main"
